--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 html{
-  background-image: url('../img/nebula.jpg');
+  background-image: url('../img/stars.jpg');
   background-repeat: none;
   background-size: cover;
 }
@@ -29,11 +29,14 @@ html{
   border-bottom: 3px solid red;
   margin-top: 5px;
   margin-bottom: 20px;
-  width: 60%;
+  width: 75%;
+}
+#title{
+  width: 50%;
 }
 #nasaImg{
 /* border: 1px solid red; */
-  height: 100px;
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -62,7 +65,8 @@ button , input{
   text-align: center;
   color: var(--fontColor);
   font-family: var(--fontStyle);
-  width: 50%;
+  width: 37%;
+  padding: 10px;
 }
 iframe{
   /* border: 1px solid red; */
@@ -75,7 +79,13 @@ h3{
   /* display: block; */
   width: 80%;
   margin: auto;
-  color: var(--greyFont);
+  color: var(--fontColor);
+  font-family: var(--fontStyle);
+}
+li{
+  text-align: center;
+  margin: 10px;
+  color: var(--fontColor);
   font-family: var(--fontStyle);
 }
 /******************************************
